started statement compilation and updated test html

--- a/examples/webgl2/src/index.html
+++ b/examples/webgl2/src/index.html
@@ -6,7 +6,8 @@
   <title>Webpack + TS + WASM</title>
 </head>
 <body>
-  <h1>Loading your app...</h1>
-  <div id="app"></div>
+  <code>
+    <pre id="code"></pre>
+  </code>
 </body>
 </html>
