added expression compilation (WIP) and fixed some bugs.

--- a/examples/webgl2/src/index.html
+++ b/examples/webgl2/src/index.html
@@ -6,8 +6,14 @@
   <title>Webpack + TS + WASM</title>
 </head>
 <body>
-  <code>
-    <pre id="code"></pre>
+  IRIS:
+  <code style="width: 100vw;">
+    <pre id="iris" style="overflow-wrap: break-word; white-space: pre-wrap; width: 100vw;"></pre>
+  </code>
+
+  GLSL:
+  <code style="width: 100vw;">
+    <pre id="glsl" style="overflow-wrap: break-word; white-space: pre-wrap; width: 100vw;"></pre>
   </code>
 </body>
 </html>
